automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -3,8 +3,9 @@
   <head>
     <title>Bowling Alley</title>
     <body>
+      <h1>Buster's Best Bowling Alley</h1>
+      <h2></h2>
       <p>whats up seema</p>
     </body>
   </head>
-<p> 97 Bowling Alley Lane, Boulder CO </p>
 </html>
