automatically backed up by learn

--- a/views/index.erb
+++ b/views/index.erb
@@ -4,7 +4,8 @@
     <title>Bowling Alley</title>
     <body>
       <h1>Buster's Best Bowling Alley</h1>
-      <h2></h2>
+      <h2>Bet You Can't Bowl A Strike Everytime</h2>
+      <h3>97 Bowling Alley Lane, Boulder CO</h3>
       <p>whats up seema</p>
     </body>
   </head>
